Refactor getting marks for student